src/test/ui/issues/issue-23046.stderr
error[E0282]: type annotations needed for `Expr<'_, VAR>`
  --> $DIR/issue-23046.rs:17:15
   |
LL |     let ex = |x| {
   |               ^ consider giving this closure parameter the explicit type `Expr<'_, VAR>`, where the type parameter `VAR` is specified
   |
help: consider specifying the type arguments in the function call
   |
LL |         let_::<VAR, F>(add(x,x), |y| {
   |             ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
